<resources>
    <string name="app_name">Attendance</string>
    <string name="detect">Detect</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_here">Register Here.</string>
    <string name="username">Username</string>
    <string name="todo">TODO</string>

    <string name="action_settings">Settings</string>
    <string name="preview_description">Image and Video preview will appear here</string>
    <string name="btn_take_picture">Take Picture</string>
    <string name="btn_record_video">Record Video</string>
    <string name="btn_select">Select</string>
    <string name="btn_face_detect">Detect</string>
</resources>
