<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_above="@+id/layout_button"
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/select_image"
            android:text="@string/btn_select"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="Suspicious0dp" />
        <Button
            android:id="@+id/save_image"
            android:text="@string/btn_face_detect"
            android:enabled="false"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="Suspicious0dp" />
    </LinearLayout>

</RelativeLayout>