<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetectVideoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_margin"
        android:layout_weight="1"
        android:orientation="vertical">

<!--        <TextView-->
<!--            android:id="@+id/txt_desc"-->
<!--            android:layout_width="fill_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:gravity="center"-->
<!--            android:padding="10dp"-->
<!--            android:text="@string/preview_description"-->
<!--            android:textSize="15dp" />-->

<!--        &lt;!&ndash; To display picture taken &ndash;&gt;-->
<!--        <ImageView-->
<!--            android:id="@+id/imgPreview"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:visibility="gone"-->
<!--            android:contentDescription="@string/todo" />-->

        <!-- To preview video recorded -->
        <VideoView
            android:id="@+id/videoPreview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:contentDescription="@string/todo" />
    </LinearLayout>

<!--    <ImageView-->
<!--        android:layout_above="@+id/layout_button"-->
<!--        android:id="@+id/image_view"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:contentDescription="@string/todo" />-->

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/select_image"
            android:text="@string/btn_select"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="Suspicious0dp" />
        <Button
            android:id="@+id/save_image"
            android:text="@string/btn_face_detect"
            android:enabled="false"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="Suspicious0dp" />
    </LinearLayout>
</RelativeLayout>